<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">
    <include layout="@layout/include_top"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"
        app:met_primaryColor="@color/text_orange"
        met_underlinecolor="@color/text_orange"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="number"
        android:maxLength="11"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_login_pwd"
            app:met_primaryColor="@color/text_orange"
            met_underlinecolor="@color/text_orange"
            app:met_clearButton="false"
            app:met_floatingLabel="highlight"
            android:inputType="textPassword"
            android:maxLength="16"/>

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:text="@string/forget_pwd"
            android:textColor="@color/text_orange" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relay_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:visibility="gone"
        >
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_verification_code"
            app:met_primaryColor="@color/text_orange"
            met_underlinecolor="@color/text_orange"
            app:met_clearButton="false"
            app:met_floatingLabel="highlight"
            android:inputType="number"
            android:maxLength="4"/>
        <ImageView
            android:id="@+id/register_iv_code"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/et_code"
            android:layout_marginBottom="5dp"
            android:padding="5dp"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:onClick="requestLogin"
        android:text="@string/btn_login"
        android:elevation="100dp"/>

    <TextView
        android:id="@+id/tv_newuser_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:text="@string/new_user_reg"
        android:textColor="@color/text_black"
        />
</LinearLayout>
